fix: left-align all columns, fix Profile modal (handleShow was setting false)

--- a/src/components/elements/Search/Search.module.css
+++ b/src/components/elements/Search/Search.module.css
@@ -331,7 +331,7 @@
 
 /* Column-specific styles */
 .actionsCell {
-  text-align: right !important;
+  text-align: left !important;
 }
 
 .actionLink {
@@ -365,7 +365,7 @@
 }
 
 .colPending {
-  text-align: center;
+  text-align: left;
 }
 
 /* Pending badges */
